# sports-field-detector

./: .gitignore  README.md
examples/: tennis0_2048x1365.raw  tennis1_2440x1372.raw  tennis3_1000x563.raw  tennis4_1000x563.raw  tennis5_2440x1373.raw  tennis6_2440x1372.raw  tennis7_602x389.raw  volleyball0_800x450.raw  volleyball1_950x713.raw
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_utils.cpp  app_utlis.h  main.cpp
src/line_model_detection/: CMakeLists.txt  direct_model_alignment.cpp  direct_model_alignment.h  drawing_routines.cpp  drawing_routines.h  homography_estimator.cpp  homography_estimator.h  line_detector.cpp  line_detector.h  line_model.cpp  line_model.h  line_model_defs.cpp  line_model_defs.h  line_model_detector.cpp  line_model_detector.h  line_optimization_problem.cpp  line_optimization_problem.h  line_pixel_extractor.cpp  line_pixel_extractor.h  types.h
